# mammos-spindynamics

./: .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
.binder/: environment.yml
.github/workflows/: check-changelog.yml  publish.yml
changes/: 14.misc.md  32.added.md  38.misc.md  41.misc.md  42.added.md  43.added.md  45.fixed.md  54.fixed.md  55.fixed.md  56.misc.md  58.misc.md  59.misc.md  68.changed.md
dev/: mammos_spindynamics.yaml
dev/data-Ni80Fe20/: extract-data.ipynb
examples/: UppASD.ipynb  atomic_db.ipynb  fail.ipynb  index.rst  magnetization.ipynb  output.ipynb  parse_inpsd.ipynb  quickstart.ipynb  temperature-dependent-parameters.ipynb  uppasd.ipynb  uppasd_db.ipynb  uppasd_internal.ipynb
examples/my-first-simulation/run-0/: ams.bccFe100.out  averages.bccFe100.out  cumulants.bccFe100.json  cumulants.bccFe100.out  fort.1420  fort.2420  fort.420  info.yaml  inp.bccFe100.json  magdos.bccFe100.out  mcinitial.bccFe100.out  micro_ASD.bccFe100.out  projavgs.bccFe100.out  qpoints.out  qpointsdir.out  sq.bccFe100.out  struct.bccFe100.out  totenergy.bccFe100.out  uppasd.bccFe100.yaml
src/mammos_spindynamics/: __init__.py  db.py  postprocess.py  uppasd.py
src/mammos_spindynamics/data/: db.csv
src/mammos_spindynamics/data/0001/: M.csv
src/mammos_spindynamics/data/0002/: M.csv
src/mammos_spindynamics/data/0003/: M.csv  jfile
src/mammos_spindynamics/data/0005/: M.csv
src/mammos_spindynamics/data/0007/: M.csv
src/mammos_spindynamics/data/0008/: M.csv
src/mammos_spindynamics/data/004/: M.csv
src/mammos_spindynamics/db/: 0001.csv  __init__.py  db.csv  tables.py
src/mammos_spindynamics/db/data/: 0002.csv  0003.csv
src/mammos_spindynamics/db/data/0001/: M.csv
src/mammos_spindynamics/db/data/0002/: M.csv
src/mammos_spindynamics/uppasd/: __init__.py  _data.py  _inpsd_dat.py  _simulation.py  data.py  inpsd.py  simulation.py
tests/: test_db.py  test_uppasd.py  test_uppasd_simulation.py  uppasd.py
tests/data/uppasd/: mammos_spindynamics.yaml
tests/data/uppasd/run-0/: mammos_spindynamics.yaml
tests/data/uppasd/temperature_sweep-0/: info.yaml
